[package]
name = "bubblegum"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bubblegum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" , features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
gummyroll = { path = "../gummyroll", features = ["cpi"] }
bytemuck = "1.8.0"

[profile.release]
overflow-checks = true